Fix navbar alignment

--- a/SITE/css/style.css
+++ b/SITE/css/style.css
@@ -27,7 +27,7 @@ html{
 
 /* header navbar section start*/
 header {
-    width: 96%;
+  width: 96%;
     background: var(--weight); /* Fixed spelling */
     position: fixed;
     top: 2rem;
@@ -38,7 +38,6 @@ header {
     justify-content: space-between;
     padding: 1rem 2rem;
     z-index: 1000;
-
 }
 /*logo  name*/
 header a{
@@ -93,3 +92,36 @@ header.fa-bars{
 /* header navbar section end */
 
 
+
+
+
+
+
+
+
+/* media query */
+@media(max-width:768px){
+    html{
+        font-size: 55%;
+    }
+
+    header .fa-bars{
+        display: block;
+    }
+    header .navbar{
+        position: fixed;
+        top: 5.5rem;left: 0;
+        width: 100%;
+        background: var(--weight);
+        /* opacity:0;*/
+    }
+    header .navbar ul{
+        flex-flow: column;
+        padding: 2rem 0;
+
+    }
+    header .navbar ul li a{
+        font-size: 3rem;
+        display: block;
+    }
+}
